feat: add formatters via treefmt-nix

--- a/aoc2023.cabal
+++ b/aoc2023.cabal
@@ -1,33 +1,34 @@
-cabal-version:      3.0
-name:               aoc2023
-version:            0.1.0.0
-synopsis:           My Advent of Code 2023 solutions
-license:            MIT
-license-file:       LICENSE
-author:             Leah Amelia Chen
-maintainer:         hi@pluie.me
-build-type:         Simple
+cabal-version: 3.0
+name:          aoc2023
+version:       0.1.0.0
+synopsis:      My Advent of Code 2023 solutions
+license:       MIT
+license-file:  LICENSE
+author:        Leah Amelia Chen
+maintainer:    hi@pluie.me
+build-type:    Simple
 
 common deps
   default-language: GHC2021
   build-depends:
-    base ^>=4.17.2.1,
-    algebraic-graphs,
-    containers,
-    hspec,
-    megaparsec,
-    safe,
-    search-algorithms,
-    split,
+    , algebraic-graphs
+    , base               ^>=4.17.2.1
+    , containers
+    , hspec
+    , megaparsec
+    , safe
+    , search-algorithms
+    , split
 
-  ghc-options: -Wall
+  ghc-options:      -Wall
 
 library
-  import: deps
+  import:          deps
   exposed-modules: Util.Aoc2023
-  hs-source-dirs: lib
+  hs-source-dirs:  lib
+
 executable main
-  import: deps
-  build-depends: aoc2023
+  import:         deps
+  build-depends:  aoc2023
   hs-source-dirs: src
-  main-is: Main.hs
+  main-is:        Main.hs
