--- a/aoc2023.cabal
+++ b/aoc2023.cabal
@@ -11,7 +11,8 @@ build-type:    Simple
 common deps
   default-language: GHC2021
   build-depends:
-    , base               ^>=4.17.2.1
+    , array
+    , base        ^>=4.17.2.1
     , containers
     , hspec
     , megaparsec
@@ -22,12 +23,30 @@ common deps
 
 library
   import:          deps
-  exposed-modules: Util.Aoc2023
+  exposed-modules:
+    Util.Aoc2023
+    Util.Aoc2023.Array
+    Util.Aoc2023.Dir
+    Util.Aoc2023.Vec2
+
   hs-source-dirs:  lib
 
-executable aoc2023
+executable solns
   import:         deps
   build-depends:  aoc2023
   hs-source-dirs: src
   main-is:        Main.hs
-  other-modules:  Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9
+  other-modules:
+    Day1
+    Day10
+    Day11
+    Day2
+    Day3
+    Day4
+    Day5
+    Day6
+    Day7
+    Day8
+    Day9
+
+  ghc-options:    -O2 -threaded -fprof-auto "-with-rtsopts=-N -s"
